fix alignment of complete, delete btns and content, add delete todo feature

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
+	padding: 3em 0 3em 0;
+	margin: 0;
+	box-sizing: border-box;
 	background-color: #282c34;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	font-size: calc(10px + 2vmin);
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
