--- a/src/components/TodoItem.css
+++ b/src/components/TodoItem.css
@@ -1,16 +1,17 @@
 .TodoItem {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    width: 340px;
     border: 1px solid #e1e1e1;
     height: 45px;
     font-size: 24px;
     position: relative;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 
 .content {
-    margin-left: 40px;
+    color: white;
 }
 
 .content.complete {
@@ -63,8 +64,6 @@
     width: 30px;
     height: 30px;
     border: 1px solid rgba(233, 12, 12, 0.6);
-    animation: loader-spin 1.2s infinite linear;
-    vertical-align: top;
     border-radius: 50%;
   }
   .x-button {
@@ -79,6 +78,7 @@
       transform: rotate(360deg);
     }
   } */
+
   @keyframes checkmark {
     0% {
       height: 0;
